objects/vlocity_ins__AttributeCategory__c.object
<CustomObject>
    <description>Vlocity Attribute Categories allow Attributes to be assigned to admin-defined groupings. The Category also identifies some characteristics of the profiling attributes in that grouping.</description>
    <fields>
        <fullName>vlocity_ins__ApplicableSubType__c</fullName>
        <description>Applicable Sub Types by functionality eg Profiling, Product Selection,Product Configuration</description>
        <label>Applicable Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profile Attribute</fullName>
                    <default>true</default>
                    <label>Profile Attribute</label>
                </value>
                <value>
                    <fullName>Product Attribute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicableTypesFilter__c</fullName>
        <label>Applicable Types Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicableTypes__c</fullName>
        <description>Object types to which this category applies such as Account, Contact, Product2, ContentVersion, Campaign or Any. (Multi-select)</description>
        <label>Applicable Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                    <default>true</default>
                    <label>Any</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>ContentVersion</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Product2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <description>Unique code for this attribute category.</description>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__ColorCode__c</fullName>
        <description>The hexadecimal code for a color, beginning with the pound sign or hashtag (#).</description>
        <label>Color Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>Description of this attribute category.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this attribute category can be used as a product selection filter.</description>
        <label>Filterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplaySequence__c</fullName>
        <description>Display sequence of this category in the profile details section.</description>
        <label>Display Sequence</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <description>Start date at which this attribute category becomes available to administrators.</description>
        <label>Effectivity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <description>End date after which this attribute category is no longer available to administrators.</description>
        <label>Effectivity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IndustryVertical__c</fullName>
        <description>Reserved for future use.</description>
        <label>Industry Vertical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the attribute category is active. Inactive attribute categories are not available to end users.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this Attribute Category is private. Reserved for future use.</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsUserAttributesCreatedPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, new user-created attributes in this category will be defined as private, which means that other users will not be able to see this attribute in the list of available attributes.</description>
        <inlineHelpText>Set this to true if you want new user created attributes to be private, which means other users will not be able to see this attribute in the list to select from.</inlineHelpText>
        <label>User Attributes Created Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LockedFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether end users can dynamically create their own attributes in this category or not. If locked, attributes must be added via the admin UI.</description>
        <label>Attributes Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <description>Status of the attribute category such as draft, test, production or obsolete.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Pre-Production</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__UIControlType__c</fullName>
        <description>For profile attributes, the user interface control type for its attributes such as 3-State, 1-5 Scale, On-Off, or Text Comment.</description>
        <label>UI Control Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-Off</fullName>
                    <default>true</default>
                    <label>On-Off</label>
                </value>
                <value>
                    <fullName>3-state</fullName>
                </value>
                <value>
                    <fullName>1-5 scale</fullName>
                </value>
                <value>
                    <fullName>TextComment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Attribute Category</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Attribute Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>